# monorepotest

./: README.md
adhoc/: .editorconfig  .golangci.yml  README.md  adhoc.sh
adhoc/.adhoc/: adhoc.py  adhoc.sh
adhoc/.moon/: tasks.yml
adhoc/dockerfiles/services-date/: docker-entrypoint.sh
adhoc/dockerfiles/services-time/: Dockerfile  docker-entrypoint.sh
adhoc/libs/contracts/: Makefile  project.json
adhoc/scripts/: docker-build.sh  go-install.sh  go-version.sh
adhoc/services/date/: .gitignore  Makefile  project.json
adhoc/services/time/: .gitignore  Makefile  project.json
adhoc/tools/go-tools/: Makefile  project.json
bazel/: BUILD.bazel  README.md  WORKSPACE.bazel  go.work.bzl
bazel/libs/contracts/: BUILD.bazel  contracts_test.go
bazel/services/date/: BUILD.bazel
bazel/services/time/: BUILD.bazel  main.go
earthly/: Earthfile  README.md  docker-compose.yaml  go.work  go.work.sum
earthly/contracts/: Earthfile
earthly/libs/contracts/: contracts.go
earthly/services/date/: .gitignore  Earthfile  go.mod  main.go
earthly/services/time/: .gitignore  Earthfile  main.go  main_test.go
moon/: .gitignore  .prototools  README.md
moon/.moon/: workspace.yml
moon/dockerfiles/services-date/: Dockerfile
moon/libs/contracts/: go.mod  moon.yml
moon/scripts/: go-build.sh  go-lint.sh  go-test.sh
moon/services/date/: main.go  moon.yml
moon/services/time/: go.mod  moon.yml
moon/tools/go-tools/: moon.yml
